--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color:#040410;
+    color: white;
+}
+
 .inputRounded .MuiOutlinedInput-root{
     border-radius: 10px;
     
