add error validation

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: 'Montserrat', sans-serif;
+}
 
 body {
     background-color:#040410;
@@ -12,4 +18,29 @@ body {
     
  }
 
- /*  */
+/*========== Scrollbar ==========*/
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    overflow: hidden;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+   
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #424248;
+    border-radius: 20px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #676770; 
+  }
+  
